--- a/src/styleSheets/vbargraph.css
+++ b/src/styleSheets/vbargraph.css
@@ -1,6 +1,6 @@
 .bar {
-  border: 1px solid black;
-  background-color:antiquewhite;
+  stroke: 1px solid white;
+  fill:antiquewhite;
 }
   
 .bar:hover {
@@ -9,4 +9,16 @@
 
 svg {
   border: 1px solid black;
+  font-size:1rem;
+}
+
+.grid .tick {
+  stroke:lightgrey;
+  stroke-opacity:0.3;
+  shape-rendering: crispEdges;
+  
+}
+
+.grid path {
+  stroke-width: 0;
 }
