loading/survTitle style

--- a/src/styleSheets/Survey.scss
+++ b/src/styleSheets/Survey.scss
@@ -9,11 +9,14 @@
     padding-left:2rem;
 }
 
-survTitle{
-
+.survTitle{
+  margin-bottom:1rem;
   font-size:2rem;
 }
-
+.submitting{
+  height:2rem;
+  width:2rem;
+}
 
 label {
   display:block;
