--- a/src/styleSheets/App.scss
+++ b/src/styleSheets/App.scss
@@ -6,7 +6,8 @@
     background-color:rgb(248, 244, 238);
     position:relative;
     height:100vh;
-    width:100vw;
+    width:100%;
+
     font-family: 'Roboto', sans-serif;
 }
 
