--- a/src/styleSheets/Survey.scss
+++ b/src/styleSheets/Survey.scss
@@ -2,7 +2,7 @@
     width:60%;
     max-width:1000px;
     min-width:600px;
-    height:40%;
+    min-height:500px;
     background-color: antiquewhite;
     margin:0 auto;
     padding-top:1rem;
